taller compilado con NASM/y.output
Grammar

    0 $accept: inicio $end

    1 $@1: /* empty */

    2 inicio: INICIO_jmery $@1 block FIN_jmery

    3 block: '{' sentencia '}'

    4 sentencia: instruccion sentencia
    5          | instruccion

    6 instruccion: condicional
    7            | declaracion
    8            | impresion
    9            | asignacion

   10 $@2: /* empty */

   11 $@3: /* empty */

   12 $@4: /* empty */

   13 declaracion: digito $@2 intJmery identificador $@3 $@4 ';'

   14 $@5: /* empty */

   15 $@6: /* empty */

   16 asignacion: identificador $@5 '=' valor $@6 ';'

   17 valor: operacion
   18      | letras

   19 exp: term '+' exp
   20    | term '-' exp
   21    | term

   22 term: factor '*' term
   23     | factor '/' term
   24     | factor

   25 operacion: '(' exp ')' operacion
   26          | exp

   27 factor: digito
   28       | identificador

   29 condicional: ciclo
   30            | if

   31 $@7: /* empty */

   32 if: jmeryIF '(' identificador ')' $@7 '{' sentencia '}'

   33 $@8: /* empty */

   34 if: jmeryIF '(' digito ')' $@8 '{' sentencia '}'

   35 $@9: /* empty */

   36 ciclo: itera '(' digito ')' $@9 '{' sentencia '}'

   37 $@10: /* empty */

   38 ciclo: itera '(' identificador ')' $@10 '{' sentencia '}'

   39 $@11: /* empty */

   40 impresion: imprimir '(' letras ')' $@11 ';'

   41 $@12: /* empty */

   42 impresion: imprimir '(' letras ',' param ')' $@12 ';'

   43 param: identificador


Terminals, with rules where they appear

$end (0) 0
'(' (40) 25 32 34 36 38 40 42
')' (41) 25 32 34 36 38 40 42
'*' (42) 22
'+' (43) 19
',' (44) 42
'-' (45) 20
'/' (47) 23
';' (59) 13 16 40 42
'=' (61) 16
'{' (123) 3 32 34 36 38
'}' (125) 3 32 34 36 38
error (256)
INICIO_jmery (258) 2
FIN_jmery (259) 2
jmeryIF (260) 32 34
itera (261) 36 38
imprimir (262) 40 42
intJmery (263) 13
letras (264) 18 40 42
identificador (265) 13 16 28 32 38 43
digito (266) 13 27 34 36


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
inicio (24)
    on left: 2, on right: 0
$@1 (25)
    on left: 1, on right: 2
block (26)
    on left: 3, on right: 2
sentencia (27)
    on left: 4 5, on right: 3 4 32 34 36 38
instruccion (28)
    on left: 6 7 8 9, on right: 4 5
declaracion (29)
    on left: 13, on right: 7
$@2 (30)
    on left: 10, on right: 13
$@3 (31)
    on left: 11, on right: 13
$@4 (32)
    on left: 12, on right: 13
asignacion (33)
    on left: 16, on right: 9
$@5 (34)
    on left: 14, on right: 16
$@6 (35)
    on left: 15, on right: 16
valor (36)
    on left: 17 18, on right: 16
exp (37)
    on left: 19 20 21, on right: 19 20 25 26
term (38)
    on left: 22 23 24, on right: 19 20 21 22 23
operacion (39)
    on left: 25 26, on right: 17 25
factor (40)
    on left: 27 28, on right: 22 23 24
condicional (41)
    on left: 29 30, on right: 6
if (42)
    on left: 32 34, on right: 30
$@7 (43)
    on left: 31, on right: 32
$@8 (44)
    on left: 33, on right: 34
ciclo (45)
    on left: 36 38, on right: 29
$@9 (46)
    on left: 35, on right: 36
$@10 (47)
    on left: 37, on right: 38
impresion (48)
    on left: 40 42, on right: 8
$@11 (49)
    on left: 39, on right: 40
$@12 (50)
    on left: 41, on right: 42
param (51)
    on left: 43, on right: 42


state 0

    0 $accept: . inicio $end

    INICIO_jmery  shift, and go to state 1

    inicio  go to state 2


state 1

    2 inicio: INICIO_jmery . $@1 block FIN_jmery

    $default  reduce using rule 1 ($@1)

    $@1  go to state 3


state 2

    0 $accept: inicio . $end

    $end  shift, and go to state 4


state 3

    2 inicio: INICIO_jmery $@1 . block FIN_jmery

    '{'  shift, and go to state 5

    block  go to state 6


state 4

    0 $accept: inicio $end .

    $default  accept


state 5

    3 block: '{' . sentencia '}'

    jmeryIF        shift, and go to state 7
    itera          shift, and go to state 8
    imprimir       shift, and go to state 9
    identificador  shift, and go to state 10
    digito         shift, and go to state 11

    sentencia    go to state 12
    instruccion  go to state 13
    declaracion  go to state 14
    asignacion   go to state 15
    condicional  go to state 16
    if           go to state 17
    ciclo        go to state 18
    impresion    go to state 19


state 6

    2 inicio: INICIO_jmery $@1 block . FIN_jmery

    FIN_jmery  shift, and go to state 20


state 7

   32 if: jmeryIF . '(' identificador ')' $@7 '{' sentencia '}'
   34   | jmeryIF . '(' digito ')' $@8 '{' sentencia '}'

    '('  shift, and go to state 21


state 8

   36 ciclo: itera . '(' digito ')' $@9 '{' sentencia '}'
   38      | itera . '(' identificador ')' $@10 '{' sentencia '}'

    '('  shift, and go to state 22


state 9

   40 impresion: imprimir . '(' letras ')' $@11 ';'
   42          | imprimir . '(' letras ',' param ')' $@12 ';'

    '('  shift, and go to state 23


state 10

   16 asignacion: identificador . $@5 '=' valor $@6 ';'

    $default  reduce using rule 14 ($@5)

    $@5  go to state 24


state 11

   13 declaracion: digito . $@2 intJmery identificador $@3 $@4 ';'

    $default  reduce using rule 10 ($@2)

    $@2  go to state 25


state 12

    3 block: '{' sentencia . '}'

    '}'  shift, and go to state 26


state 13

    4 sentencia: instruccion . sentencia
    5          | instruccion .

    jmeryIF        shift, and go to state 7
    itera          shift, and go to state 8
    imprimir       shift, and go to state 9
    identificador  shift, and go to state 10
    digito         shift, and go to state 11

    $default  reduce using rule 5 (sentencia)

    sentencia    go to state 27
    instruccion  go to state 13
    declaracion  go to state 14
    asignacion   go to state 15
    condicional  go to state 16
    if           go to state 17
    ciclo        go to state 18
    impresion    go to state 19


state 14

    7 instruccion: declaracion .

    $default  reduce using rule 7 (instruccion)


state 15

    9 instruccion: asignacion .

    $default  reduce using rule 9 (instruccion)


state 16

    6 instruccion: condicional .

    $default  reduce using rule 6 (instruccion)


state 17

   30 condicional: if .

    $default  reduce using rule 30 (condicional)


state 18

   29 condicional: ciclo .

    $default  reduce using rule 29 (condicional)


state 19

    8 instruccion: impresion .

    $default  reduce using rule 8 (instruccion)


state 20

    2 inicio: INICIO_jmery $@1 block FIN_jmery .

    $default  reduce using rule 2 (inicio)


state 21

   32 if: jmeryIF '(' . identificador ')' $@7 '{' sentencia '}'
   34   | jmeryIF '(' . digito ')' $@8 '{' sentencia '}'

    identificador  shift, and go to state 28
    digito         shift, and go to state 29


state 22

   36 ciclo: itera '(' . digito ')' $@9 '{' sentencia '}'
   38      | itera '(' . identificador ')' $@10 '{' sentencia '}'

    identificador  shift, and go to state 30
    digito         shift, and go to state 31


state 23

   40 impresion: imprimir '(' . letras ')' $@11 ';'
   42          | imprimir '(' . letras ',' param ')' $@12 ';'

    letras  shift, and go to state 32


state 24

   16 asignacion: identificador $@5 . '=' valor $@6 ';'

    '='  shift, and go to state 33


state 25

   13 declaracion: digito $@2 . intJmery identificador $@3 $@4 ';'

    intJmery  shift, and go to state 34


state 26

    3 block: '{' sentencia '}' .

    $default  reduce using rule 3 (block)


state 27

    4 sentencia: instruccion sentencia .

    $default  reduce using rule 4 (sentencia)


state 28

   32 if: jmeryIF '(' identificador . ')' $@7 '{' sentencia '}'

    ')'  shift, and go to state 35


state 29

   34 if: jmeryIF '(' digito . ')' $@8 '{' sentencia '}'

    ')'  shift, and go to state 36


state 30

   38 ciclo: itera '(' identificador . ')' $@10 '{' sentencia '}'

    ')'  shift, and go to state 37


state 31

   36 ciclo: itera '(' digito . ')' $@9 '{' sentencia '}'

    ')'  shift, and go to state 38


state 32

   40 impresion: imprimir '(' letras . ')' $@11 ';'
   42          | imprimir '(' letras . ',' param ')' $@12 ';'

    ')'  shift, and go to state 39
    ','  shift, and go to state 40


state 33

   16 asignacion: identificador $@5 '=' . valor $@6 ';'

    letras         shift, and go to state 41
    identificador  shift, and go to state 42
    digito         shift, and go to state 43
    '('            shift, and go to state 44

    valor      go to state 45
    exp        go to state 46
    term       go to state 47
    operacion  go to state 48
    factor     go to state 49


state 34

   13 declaracion: digito $@2 intJmery . identificador $@3 $@4 ';'

    identificador  shift, and go to state 50


state 35

   32 if: jmeryIF '(' identificador ')' . $@7 '{' sentencia '}'

    $default  reduce using rule 31 ($@7)

    $@7  go to state 51


state 36

   34 if: jmeryIF '(' digito ')' . $@8 '{' sentencia '}'

    $default  reduce using rule 33 ($@8)

    $@8  go to state 52


state 37

   38 ciclo: itera '(' identificador ')' . $@10 '{' sentencia '}'

    $default  reduce using rule 37 ($@10)

    $@10  go to state 53


state 38

   36 ciclo: itera '(' digito ')' . $@9 '{' sentencia '}'

    $default  reduce using rule 35 ($@9)

    $@9  go to state 54


state 39

   40 impresion: imprimir '(' letras ')' . $@11 ';'

    $default  reduce using rule 39 ($@11)

    $@11  go to state 55


state 40

   42 impresion: imprimir '(' letras ',' . param ')' $@12 ';'

    identificador  shift, and go to state 56

    param  go to state 57


state 41

   18 valor: letras .

    $default  reduce using rule 18 (valor)


state 42

   28 factor: identificador .

    $default  reduce using rule 28 (factor)


state 43

   27 factor: digito .

    $default  reduce using rule 27 (factor)


state 44

   25 operacion: '(' . exp ')' operacion

    identificador  shift, and go to state 42
    digito         shift, and go to state 43

    exp     go to state 58
    term    go to state 47
    factor  go to state 49


state 45

   16 asignacion: identificador $@5 '=' valor . $@6 ';'

    $default  reduce using rule 15 ($@6)

    $@6  go to state 59


state 46

   26 operacion: exp .

    $default  reduce using rule 26 (operacion)


state 47

   19 exp: term . '+' exp
   20    | term . '-' exp
   21    | term .

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61

    $default  reduce using rule 21 (exp)


state 48

   17 valor: operacion .

    $default  reduce using rule 17 (valor)


state 49

   22 term: factor . '*' term
   23     | factor . '/' term
   24     | factor .

    '*'  shift, and go to state 62
    '/'  shift, and go to state 63

    $default  reduce using rule 24 (term)


state 50

   13 declaracion: digito $@2 intJmery identificador . $@3 $@4 ';'

    $default  reduce using rule 11 ($@3)

    $@3  go to state 64


state 51

   32 if: jmeryIF '(' identificador ')' $@7 . '{' sentencia '}'

    '{'  shift, and go to state 65


state 52

   34 if: jmeryIF '(' digito ')' $@8 . '{' sentencia '}'

    '{'  shift, and go to state 66


state 53

   38 ciclo: itera '(' identificador ')' $@10 . '{' sentencia '}'

    '{'  shift, and go to state 67


state 54

   36 ciclo: itera '(' digito ')' $@9 . '{' sentencia '}'

    '{'  shift, and go to state 68


state 55

   40 impresion: imprimir '(' letras ')' $@11 . ';'

    ';'  shift, and go to state 69


state 56

   43 param: identificador .

    $default  reduce using rule 43 (param)


state 57

   42 impresion: imprimir '(' letras ',' param . ')' $@12 ';'

    ')'  shift, and go to state 70


state 58

   25 operacion: '(' exp . ')' operacion

    ')'  shift, and go to state 71


state 59

   16 asignacion: identificador $@5 '=' valor $@6 . ';'

    ';'  shift, and go to state 72


state 60

   19 exp: term '+' . exp

    identificador  shift, and go to state 42
    digito         shift, and go to state 43

    exp     go to state 73
    term    go to state 47
    factor  go to state 49


state 61

   20 exp: term '-' . exp

    identificador  shift, and go to state 42
    digito         shift, and go to state 43

    exp     go to state 74
    term    go to state 47
    factor  go to state 49


state 62

   22 term: factor '*' . term

    identificador  shift, and go to state 42
    digito         shift, and go to state 43

    term    go to state 75
    factor  go to state 49


state 63

   23 term: factor '/' . term

    identificador  shift, and go to state 42
    digito         shift, and go to state 43

    term    go to state 76
    factor  go to state 49


state 64

   13 declaracion: digito $@2 intJmery identificador $@3 . $@4 ';'

    $default  reduce using rule 12 ($@4)

    $@4  go to state 77


state 65

   32 if: jmeryIF '(' identificador ')' $@7 '{' . sentencia '}'

    jmeryIF        shift, and go to state 7
    itera          shift, and go to state 8
    imprimir       shift, and go to state 9
    identificador  shift, and go to state 10
    digito         shift, and go to state 11

    sentencia    go to state 78
    instruccion  go to state 13
    declaracion  go to state 14
    asignacion   go to state 15
    condicional  go to state 16
    if           go to state 17
    ciclo        go to state 18
    impresion    go to state 19


state 66

   34 if: jmeryIF '(' digito ')' $@8 '{' . sentencia '}'

    jmeryIF        shift, and go to state 7
    itera          shift, and go to state 8
    imprimir       shift, and go to state 9
    identificador  shift, and go to state 10
    digito         shift, and go to state 11

    sentencia    go to state 79
    instruccion  go to state 13
    declaracion  go to state 14
    asignacion   go to state 15
    condicional  go to state 16
    if           go to state 17
    ciclo        go to state 18
    impresion    go to state 19


state 67

   38 ciclo: itera '(' identificador ')' $@10 '{' . sentencia '}'

    jmeryIF        shift, and go to state 7
    itera          shift, and go to state 8
    imprimir       shift, and go to state 9
    identificador  shift, and go to state 10
    digito         shift, and go to state 11

    sentencia    go to state 80
    instruccion  go to state 13
    declaracion  go to state 14
    asignacion   go to state 15
    condicional  go to state 16
    if           go to state 17
    ciclo        go to state 18
    impresion    go to state 19


state 68

   36 ciclo: itera '(' digito ')' $@9 '{' . sentencia '}'

    jmeryIF        shift, and go to state 7
    itera          shift, and go to state 8
    imprimir       shift, and go to state 9
    identificador  shift, and go to state 10
    digito         shift, and go to state 11

    sentencia    go to state 81
    instruccion  go to state 13
    declaracion  go to state 14
    asignacion   go to state 15
    condicional  go to state 16
    if           go to state 17
    ciclo        go to state 18
    impresion    go to state 19


state 69

   40 impresion: imprimir '(' letras ')' $@11 ';' .

    $default  reduce using rule 40 (impresion)


state 70

   42 impresion: imprimir '(' letras ',' param ')' . $@12 ';'

    $default  reduce using rule 41 ($@12)

    $@12  go to state 82


state 71

   25 operacion: '(' exp ')' . operacion

    identificador  shift, and go to state 42
    digito         shift, and go to state 43
    '('            shift, and go to state 44

    exp        go to state 46
    term       go to state 47
    operacion  go to state 83
    factor     go to state 49


state 72

   16 asignacion: identificador $@5 '=' valor $@6 ';' .

    $default  reduce using rule 16 (asignacion)


state 73

   19 exp: term '+' exp .

    $default  reduce using rule 19 (exp)


state 74

   20 exp: term '-' exp .

    $default  reduce using rule 20 (exp)


state 75

   22 term: factor '*' term .

    $default  reduce using rule 22 (term)


state 76

   23 term: factor '/' term .

    $default  reduce using rule 23 (term)


state 77

   13 declaracion: digito $@2 intJmery identificador $@3 $@4 . ';'

    ';'  shift, and go to state 84


state 78

   32 if: jmeryIF '(' identificador ')' $@7 '{' sentencia . '}'

    '}'  shift, and go to state 85


state 79

   34 if: jmeryIF '(' digito ')' $@8 '{' sentencia . '}'

    '}'  shift, and go to state 86


state 80

   38 ciclo: itera '(' identificador ')' $@10 '{' sentencia . '}'

    '}'  shift, and go to state 87


state 81

   36 ciclo: itera '(' digito ')' $@9 '{' sentencia . '}'

    '}'  shift, and go to state 88


state 82

   42 impresion: imprimir '(' letras ',' param ')' $@12 . ';'

    ';'  shift, and go to state 89


state 83

   25 operacion: '(' exp ')' operacion .

    $default  reduce using rule 25 (operacion)


state 84

   13 declaracion: digito $@2 intJmery identificador $@3 $@4 ';' .

    $default  reduce using rule 13 (declaracion)


state 85

   32 if: jmeryIF '(' identificador ')' $@7 '{' sentencia '}' .

    $default  reduce using rule 32 (if)


state 86

   34 if: jmeryIF '(' digito ')' $@8 '{' sentencia '}' .

    $default  reduce using rule 34 (if)


state 87

   38 ciclo: itera '(' identificador ')' $@10 '{' sentencia '}' .

    $default  reduce using rule 38 (ciclo)


state 88

   36 ciclo: itera '(' digito ')' $@9 '{' sentencia '}' .

    $default  reduce using rule 36 (ciclo)


state 89

   42 impresion: imprimir '(' letras ',' param ')' $@12 ';' .

    $default  reduce using rule 42 (impresion)
